Fix vertical align table example

--- a/style.css
+++ b/style.css
@@ -711,12 +711,19 @@ a:link, a:visited {
 }
 
 .ex-vertical-align-table {
-    padding: 16px 16px 0 16px;
+    margin: 16px 24px;
+    margin-bottom: 0;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+.ex-vertical-align-table-row {
+    height: 90px;
 }
 
 .ex-vertical-align-cell {
     background-color: white;
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     display: table-cell;
     height: 2.5em;
     border: 2px solid black;
@@ -724,6 +731,7 @@ a:link, a:visited {
 
 .cell > .codeblock {
     padding-top: 0;
+    padding-bottom: 8px;
 }
 
 .ex-vertical-align-text {
